force-app/main/default/objects/animalos__Invoice_Line_Item__c/fields/animalos__Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Delivery_Date__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>