force-app/main/default/objects/animalos__Invoice_Line_Item__c/fields/animalos__Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>animalos__Discount_Amount__c</fullName>
    <formula>(animalos__Price__c * animalos__Quantity__c) - animalos__Total_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>