force-app/main/default/objects/animalos__Invoice_Line_Item__c/fields/animalos__Invoice__c.field-meta.xml
<CustomField>
    <fullName>animalos__Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>animalos__Invoice__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>