force-app/main/default/objects/animalos__Invoice_Line_Item__c/fields/animalos__Price__c.field-meta.xml
<CustomField>
    <fullName>animalos__Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>