force-app/main/default/objects/animalos__Invoice_Line_Item__c/fields/animalos__Quantity__c.field-meta.xml
<CustomField>
    <fullName>animalos__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>