force-app/main/default/objects/animalos__Invoice_Line_Item__c/fields/animalos__Service_Price__c.field-meta.xml
<CustomField>
    <fullName>animalos__Service_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Price</label>
    <referenceTo>animalos__Service_Price__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>