force-app/main/default/objects/animalos__Invoice_Line_Item__c/fields/animalos__Total_Price__c.field-meta.xml
<CustomField>
    <fullName>animalos__Total_Price__c</fullName>
    <formula>(animalos__Price__c - (animalos__Price__c *  animalos__Discount__c)) * animalos__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>